Mejora del Responsive

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -22,7 +22,7 @@
       "d2": "Challenge concentration and strategy by planning actions in challenging sequences.",
       "m3": "Quick Reflexes",
       "d3": "Quick reaction game to improve mental agility and accuracy.",
-      "m4": "Cognitive Puzzle",
+      "m4": "Puzzle",
       "d4": "Promote mental flexibility and problem-solving with changing puzzles."
     }
   },
