--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -22,7 +22,7 @@
       "d2": "Desafía la concentración y estrategia planificando acciones en secuencias desafiantes.",
       "m3": "Reflejos Rápidos",
       "d3": "Juego de reacción rápida para mejorar agilidad mental y precisión.",
-      "m4": "Puzzle Cognitivo",
+      "m4": "Puzzle",
       "d4": "Fomenta la flexibilidad mental y resolución de problemas con puzzles cambiantes."
     }
 
