Mejora de modulo responsive

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -20,7 +20,7 @@
       "d1": "Improve visual memory by remembering complex patterns under time pressure.",
       "m2": "Concentration",
       "d2": "Challenge concentration and strategy by planning actions in challenging sequences.",
-      "m3": "Quick Reflexes",
+      "m3": "Reflexes",
       "d3": "Quick reaction game to improve mental agility and accuracy.",
       "m4": "Puzzle",
       "d4": "Promote mental flexibility and problem-solving with changing puzzles."
