--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -20,7 +20,7 @@
       "d1": "Mejora memoria visual recordando patrones complejos bajo presión de tiempo.",
       "m2": "Concentración",
       "d2": "Desafía la concentración y estrategia planificando acciones en secuencias desafiantes.",
-      "m3": "Reflejos Rápidos",
+      "m3": "Reflejos",
       "d3": "Juego de reacción rápida para mejorar agilidad mental y precisión.",
       "m4": "Puzzle",
       "d4": "Fomenta la flexibilidad mental y resolución de problemas con puzzles cambiantes."
